crates/ink/tests/ui/scale_derive/fail/invalid_derive.rs
#[ink::scale_derive(encode, whatevs)]
struct S;

fn main() {
}