crates/ink/tests/ui/scale_derive/fail/invalid_derive.stderr
error: unsupported scale option: expected encode, decode or type_info
 --> tests/ui/scale_derive/fail/invalid_derive.rs:1:29
  |
1 | #[ink::scale_derive(encode, whatevs)]
  |                             ^^^^^^^
